--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,11 @@
 {
+    "name": "fusionsuite/backend",
+    "description": "It's the backend part of FusionSuite project",
+    "type": "project",
+    "homepage": "https://fusionsuite.org/",
+    "license": [
+        "AGPL-3.0-or-later"
+    ],
     "require": {
         "slim/slim": "4.*",
         "slim/psr7": "^1.1",
@@ -14,5 +21,8 @@
         "psr-4": {
             "App\\": "src"
         }
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^1.3"
     }
 }
