--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         }
     },
     "require-dev": {
-        "phpstan/phpstan": "^1.3"
+        "phpstan/phpstan": "^1.3",
+        "squizlabs/php_codesniffer": "^3.6"
     }
 }
