Update gitignore file Write tests of the RESTAPI Put Items endpoint to the root path instead CMDB Move CMDB endpoint to Config

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "tuupola/base62": "^2.0",
         "spatie/array-to-xml": "^2.12",
         "hoa/ruler": "^2.17.05.16",
-        "illuminate/events": "^8.73"
+        "illuminate/events": "^8.73",
+        "rakit/validation": "^1.4"
     },
     "autoload": {
         "psr-4": {
