--- a/composer.json
+++ b/composer.json
@@ -16,11 +16,13 @@
         "spatie/array-to-xml": "^2.12",
         "hoa/ruler": "^2.17.05.16",
         "illuminate/events": "^8.73",
-        "rakit/validation": "^1.4"
+        "rakit/validation": "^1.4",
+        "adhocore/cli": "^0.9.0"
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src"
+            "App\\": "src",
+            "ActionScripts\\": "ActionScripts"
         }
     },
     "require-dev": {
