--- a/tests/RESTAPI/fusionsuite.conf
+++ b/tests/RESTAPI/fusionsuite.conf
@@ -11,6 +11,7 @@ server {
   add_header Access-Control-Allow-Methods 'GET, POST, OPTIONS, PUT, DELETE';
   add_header Access-Control-Allow-Credentials true;
   add_header Access-Control-Allow-Headers 'Origin,Content-Type,Accept,Authorization,Cache-Control,Pragma,Expires';
+  add_header Access-Control-Expose-Headers 'X-Total-Count,Content-Range,Link';
 
   location /fusionsuite/backend/ {
     allow        127.0.0.1;
