tec: Send CORS headers on errors in Docker Nginx config
Before this config, the frontend wasn't able to access the result of the
requests in error. This is because `add_header` doesn't add headers if
the status code is not successful, except if `always` is specified.

Reference: http://nginx.org/en/docs/http/ngx_http_headers_module.html#add_header

--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -15,11 +15,11 @@ server {
     include         fastcgi_params;
 
     add_header      Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-    add_header      X-Frame-Options "SAMEORIGIN";
-    add_header      Access-Control-Allow-Origin *;
-    add_header      Access-Control-Allow-Methods 'GET, POST, OPTIONS, PUT, DELETE';
-    add_header      Access-Control-Allow-Credentials true;
-    add_header      Access-Control-Allow-Headers 'Origin,Content-Type,Accept,Authorization,Cache-Control,Pragma,Expires';
-    add_header      Access-Control-Expose-Headers 'X-Total-Count,Content-Range,Link';
+    add_header      X-Frame-Options "SAMEORIGIN" always;
+    add_header      Access-Control-Allow-Origin * always;
+    add_header      Access-Control-Allow-Methods 'GET, POST, OPTIONS, PUT, DELETE' always;
+    add_header      Access-Control-Allow-Credentials true always;
+    add_header      Access-Control-Allow-Headers 'Origin,Content-Type,Accept,Authorization,Cache-Control,Pragma,Expires' always;
+    add_header      Access-Control-Expose-Headers 'X-Total-Count,Content-Range,Link' always;
   }
 }
