--- a/tests/RESTAPI/fusionsuite.conf
+++ b/tests/RESTAPI/fusionsuite.conf
@@ -2,7 +2,7 @@ server {
   listen 80 default_server;
   listen [::]:80 default_server;
 
-  root /home/runner/work/backend/backend/public;
+  root /var/www/public;
   index index.php index.html;
   server_name _;
   add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
