--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "AGPL-3.0-or-later"
     ],
     "require": {
+        "php": "^8.0|^8.1",
         "slim/slim": "4.*",
         "slim/psr7": "^1.1",
         "robmorgan/phinx": "^0.12.3",
