Add REST API for manage display params (menus, type panels...)

--- a/src/v1/Templates/Knowledge_management.json
+++ b/src/v1/Templates/Knowledge_management.json
@@ -2,7 +2,7 @@
   {
     "itemName": "Knowledge base",
     "internalname": "knowledgebase",
-    "propertygroups": [
+    "panels": [
       {
         "name": "Classification",
         "properties": [
