--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -19,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: ['8.0', '8.1', '8.2']
+        php-versions: ['8.1', '8.2']
 
     steps:
     - uses: actions/checkout@v2
@@ -100,7 +100,7 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: ['8.0', '8.1', '8.2']
+        php-versions: ['8.1', '8.2']
 
     steps:
     - uses: actions/checkout@v2
@@ -140,8 +140,8 @@ jobs:
     runs-on: 'ubuntu-latest'
     strategy:
       matrix:
-        php-versions: ['8.0', '8.1', '8.2']
-        mysql-versions: ['5.7', '8']
+        php-versions: ['8.1', '8.2']
+        mysql-versions: ['8']
     services:
       mysql:
         image: mysql:${{ matrix.mysql-versions }}
@@ -249,7 +249,7 @@ jobs:
     strategy:
       matrix:
         php-versions: ['8.1', '8.2']
-        mariadb-versions: ['10.4', '10.5', '10.6', '10.7']
+        mariadb-versions: ['10.4', '10.5', '10.6', '10.11']
     services:
       mariadb:
         image: mariadb:${{ matrix.mariadb-versions }}
@@ -366,7 +366,7 @@ jobs:
     strategy:
       matrix:
         php-versions: ['8.1', '8.2']
-        pg-versions: ['11', '12', '13', '14', '15']
+        pg-versions: ['12', '13', '14', '15']
 
     steps:
     - uses: actions/checkout@v2
