--- a/phpstan.neon
+++ b/phpstan.neon
@@ -6,5 +6,11 @@ parameters:
     excludePaths:
         analyseAndScan:
             - ActionScripts/*/vendor/*
+    reportUnmatchedIgnoredErrors: false
     ignoreErrors:
-        - '#Call to an undefined static method Illuminate\\Database\\Capsule\\Manager::(transaction|raw)\(\).#'
+        -
+            message: '#Call to an undefined static method Illuminate\\Database\\Capsule\\Manager::(transaction|raw)\(\)#'
+            paths:
+                - src/v1/Controllers/Item.php
+                - src/v1/Models/Item.php
+
