--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "illuminate/events": "9.*",
         "rakit/validation": "^1.4",
         "adhocore/cli": "^0.9.0",
-        "genealabs/laravel-pivot-events": "9.*"
+        "genealabs/laravel-pivot-events": "9.*",
+        "symfony/error-handler": "^6.3"
     },
     "autoload": {
         "psr-4": {
