Add search filter + tests Clean mysql tests (removed in requirements) and add PHP 8.3

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -19,7 +19,7 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: ['8.1', '8.2']
+        php-versions: ['8.1', '8.2', '8.3']
 
     steps:
     - uses: actions/checkout@v2
@@ -100,13 +100,15 @@ jobs:
 
     strategy:
       matrix:
-        php-versions: ['8.1', '8.2']
+        php-versions: ['8.1', '8.2', '8.3']
 
     steps:
     - uses: actions/checkout@v2
 
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
+      with:
+        php-version: ${{ matrix.php-versions }}
 
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
@@ -135,120 +137,12 @@ jobs:
     - name: run the unit tests
       run: ./vendor/bin/phpunit tests/units/
 
-  RESTAPI_tests_MySQL:
-
-    runs-on: 'ubuntu-latest'
-    strategy:
-      matrix:
-        php-versions: ['8.1', '8.2']
-        mysql-versions: ['8']
-    services:
-      mysql:
-        image: mysql:${{ matrix.mysql-versions }}
-        ports:
-          - 3306:3306        
-        env:
-          MYSQL_DATABASE: fusionsuite
-          MYSQL_USER: fusionsuite
-          MYSQL_PASSWORD: password
-          MYSQL_ROOT_PASSWORD: rootpassword
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-
-    - name: Validate composer.json and composer.lock
-      run: composer validate --strict
-
-    - name: Cache Composer packages
-      id: composer-cache
-      uses: actions/cache@v2
-      with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php-
-
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
-
-    - name: Install dependencies into each rule action script
-      run: |
-        cd ActionScripts 
-        for d in */ ; do
-          cd $d
-          composer install --prefer-dist --no-progress
-          cd ..
-        done
-
-    - name: Setup php-fpm
-      env:
-        version: ${{ matrix.php-versions }}
-      run: |
-        sudo apt-get install php$version-fpm php$version-mysql php$version-curl
-        sudo cp /usr/sbin/php-fpm$version /usr/bin/php-fpm # copy to /usr/bin
-        sudo service php$version-fpm start
-        sudo service php$version-fpm status
-
-    - name: install nginx
-      run: sudo apt install nginx
-
-    - name: copy nginx config file
-      run: |
-        sed -i 's/php8.0-fpm/php${{ matrix.php-versions }}-fpm/g' tests/RESTAPI/fusionsuite.conf
-        sudo cp tests/RESTAPI/fusionsuite.conf /etc/nginx/sites-enabled/fusionsuite.conf
-        sudo rm /etc/nginx/sites-enabled/default
-
-    - name: start nginx
-      run: sudo systemctl start nginx
-
-    - name: install the backend
-      run: |
-        ./bin/cli env:create -n testing -H 127.0.0.1 -d fusionsuite -u fusionsuite -p password -t MySQL -c
-
-    - name: install the action scripts
-      run: ./bin/cli install
-
-    - name: copy PHP files to /var/www
-      run: |
-        sudo rm -fr /var/www/*
-        sudo cp -fr ./ /var/www/
-
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ env.NODE_VERSION }}
-        cache: 'yarn'
-        cache-dependency-path: tests/RESTAPI/yarn.lock
-
-    - name: yarn install
-      run: |
-        cd tests/RESTAPI/
-        yarn install
-
-    - name: run mountebank
-      run: |
-        cd tests/RESTAPI/
-        ./node_modules/.bin/mb --configfile mountebank/imposters.ejs &
-
-    - name: run php server to act on database
-      run: |
-        cd tests/RESTAPI/
-        php -S 127.0.0.1:8012 testDatabaseAccess.php &
-
-    - name: run REST API tests
-      run: |
-        cd tests/RESTAPI/
-        ./node_modules/.bin/mocha --ignore "./node_modules/**/*.js" --ignore "./schemaValidation/**/*.js" --timeout 5000 "./**/*.js"
-
   RESTAPI_tests_MariaDB:
 
     runs-on: 'ubuntu-latest'
     strategy:
       matrix:
-        php-versions: ['8.1', '8.2']
+        php-versions: ['8.1', '8.2', 8.3]
         mariadb-versions: ['10.4', '10.5', '10.6', '10.11']
     services:
       mariadb:
@@ -266,6 +160,8 @@ jobs:
 
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
+      with:
+        php-version: ${{ matrix.php-versions }}
 
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
@@ -365,7 +261,7 @@ jobs:
           POSTGRES_DB: fusionsuite
     strategy:
       matrix:
-        php-versions: ['8.1', '8.2']
+        php-versions: ['8.1', '8.2', '8.3']
         pg-versions: ['12', '13', '14', '15']
 
     steps:
@@ -373,6 +269,8 @@ jobs:
 
     - name: Setup PHP
       uses: shivammathur/setup-php@v2
+      with:
+        php-version: ${{ matrix.php-versions }}
 
     - name: Validate composer.json and composer.lock
       run: composer validate --strict
