--- a/composer.json
+++ b/composer.json
@@ -7,20 +7,20 @@
         "AGPL-3.0-or-later"
     ],
     "require": {
-        "php": "^8.1|^8.2",
+        "php": "^8.1|^8.2|^8.3",
         "slim/slim": "4.*",
-        "slim/psr7": "^1.1",
-        "robmorgan/phinx": "^0.12.3",
-        "illuminate/database": "9.*",
-        "tuupola/slim-jwt-auth": "^3.4",
-        "tuupola/base62": "^2.0",
-        "spatie/array-to-xml": "^2.12",
+        "slim/psr7": "1.*",
+        "robmorgan/phinx": "0.15.*",
+        "illuminate/database": "10.*",
+        "tuupola/slim-jwt-auth": "3.*",
+        "tuupola/base62": "2.*",
+        "spatie/array-to-xml": "3.2.*",
         "hoa/ruler": "^2.17.05.16",
-        "illuminate/events": "9.*",
+        "illuminate/events": "10.*",
         "rakit/validation": "^1.4",
-        "adhocore/cli": "^0.9.0",
-        "genealabs/laravel-pivot-events": "9.*",
-        "symfony/error-handler": "^6.3"
+        "adhocore/cli": "1.6.*",
+        "genealabs/laravel-pivot-events": "10.*",
+        "symfony/error-handler": "6.*"
     },
     "autoload": {
         "psr-4": {
@@ -29,9 +29,9 @@
         }
     },
     "require-dev": {
-        "phpstan/phpstan": "^1.3",
-        "squizlabs/php_codesniffer": "^3.6",
-        "phpunit/phpunit": "^9.5",
+        "phpstan/phpstan": "1.*",
+        "squizlabs/php_codesniffer": "3.*",
+        "phpunit/phpunit": "10.*",
         "bmitch/churn-php": "^1.7"
     }
 }
